ajouter image et ligne dans index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
     </head>
     <body>
+        <h1>Bienvenue dans mon site</h1>
+        <p> Salut on teste git ici</p>
         <p> Salut on teste git ici</p>
     </body>
 </html>
