modifier le fichier code et index l'ajout de plusiers lignes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     </head>
     <body>
         <h1>Bienvenue dans mon site</h1>
+        <h2>sous-titre 2</h2>
         <p> Salut on teste git ici</p>
         <p> Salut on teste git ici</p>
+        <p> Salut on teste git ici encore une modification</p>
+        <p> Salut on teste git ici un autres </p>
     </body>
 </html>
